--- a/src/css/SudokuBoard.scss
+++ b/src/css/SudokuBoard.scss
@@ -3,5 +3,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    min-height: 100vh;
+}
+
+#title-card {
+    text-align: center;
+    padding-top: 2em;
+    text-decoration: underline overline;
 }
