--- a/src/css/SudokuBoard.scss
+++ b/src/css/SudokuBoard.scss
@@ -5,6 +5,14 @@
     text-align: center;
 }
 
+#cell-table {
+    width: fit-content;
+    height: fit-content;
+    border-style: solid;
+    border-width: thick;
+    border-color: black;
+}
+
 #title-card {
     text-align: center;
     padding-top: 2em;
