--- a/src/css/SudokuBoard.scss
+++ b/src/css/SudokuBoard.scss
@@ -5,7 +5,7 @@
     text-align: center;
 }
 
-#cell-table {
+#cell_table {
     width: fit-content;
     height: fit-content;
     border-style: solid;
@@ -13,7 +13,7 @@
     border-color: black;
 }
 
-#title-card {
+#title_card {
     text-align: center;
     padding-top: 2em;
     text-decoration: underline overline;
