--- a/src/css/SudokuBoard.scss
+++ b/src/css/SudokuBoard.scss
@@ -5,16 +5,10 @@
     text-align: center;
 }
 
-#cell_table {
+#cell-table {
     width: fit-content;
     height: fit-content;
     border-style: solid;
     border-width: thick;
     border-color: black;
-}
-
-#title_card {
-    text-align: center;
-    padding-top: 2em;
-    text-decoration: underline overline;
 }
