--- a/src/styles/SudokuBoard.scss
+++ b/src/styles/SudokuBoard.scss
@@ -1,8 +1,6 @@
 #board {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    width: fit-content;
+    display: inline-block;
 }
 
 #cell-table {
