--- a/src/styles/GameplayPage.scss
+++ b/src/styles/GameplayPage.scss
@@ -1,3 +1,10 @@
+#title-card {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: black;
+    padding-bottom: 2%;
+}
+
 #gameplay {
     margin-top: 5em;
     margin-left: 8em;
