--- a/src/styles/LoginPage.scss
+++ b/src/styles/LoginPage.scss
@@ -1,6 +1,13 @@
 #login {
     display: flex;
     justify-content: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    margin-left: 30em;
+    margin-right: 30em;
 }
 
 .login-not-attempted {
