--- a/src/styles/SignupPage.scss
+++ b/src/styles/SignupPage.scss
@@ -1,6 +1,13 @@
 #signup {
     display: flex;
     justify-content: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    margin-left: 30em;
+    margin-right: 30em;
 }
 
 .signup-not-attempted {
