Made main page styling prettier

--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -1,12 +1,11 @@
 #top-card {
-    float: right;
     display: block;
     margin: 0 auto;
-    margin-top: 1em;
-    margin-right: 1em;
+    margin: 1em 1em 0 auto;
     padding-top: 1em;
     padding-bottom: 1em;
     width: 15em;
+    border-radius: 5px;
     border-width: 0.125em;
     border-color: black;
     border-style: solid;
