--- a/src/styles/SudokuCell.css
+++ b/src/styles/SudokuCell.css
@@ -1,6 +1,6 @@
 .all-cell {
-    min-width: 3.5em;
-    height: 3.5em;
+    min-width: 2.5em;
+    height: 1.25em;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -13,6 +13,7 @@
 
 .inner {
     margin: 0.25em;
+    padding: 0.25em;
 }
 
 .thick-top {
